# Python_Best_Practices

./: .env.sample  .envrc.sample  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  preCommitConfig_bacup.yaml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml  pre-commit.yml
api/: index.html
deployment/: index.html
docs/: api.md  deployment.md  index.md  installation.md  usage.md
installation/: index.html
lib/: main.py
search/: search_index.json
site/: index.html
site/deployment/: index.html
site/installation/: index.html
site/search/: search_index.json
site/usage/: index.html
src/segandiaye_toolkit/: cli.py  doc.py
tests/: parametrized_CLI_test.py  test_hello.py
